tests/function/params_no_type.rev
fn add(a) -> void {} // error: function's parameters must have a type